chore: bump alpine-proto image and go-version, everywhere! (#445)

--- a/images/alpine-proto/Dockerfile
+++ b/images/alpine-proto/Dockerfile
@@ -1,6 +1,6 @@
 # this image is our official way of generating proto-files
 # for reproducable builds, anywhere
-FROM alpine:3.16
+FROM alpine:3.17
 
 ENV GOROOT /usr/lib/go
 ENV GOPATH /go
@@ -10,14 +10,14 @@ ENV GOCACHE $GOPATH/cache
 
 RUN mkdir -p "$GOPATH/{src,bin,cache}" && chmod -R 777 "$GOPATH"
 
-RUN apk add nodejs npm alpine-sdk go protoc protobuf-dev rsync docker git cosign zstd
+RUN apk add nodejs npm alpine-sdk go protoc protobuf-dev rsync docker git cosign zstd openssl1.1-compat
 
 RUN npm i -g \
-        ts-proto@1.125.0 \
+        ts-proto@1.138.0 \
         @grpc/grpc-js \
         prettier
 
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26 && \
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28 && \
     go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
 
 COPY ./golang/Makefile /tmp/
