feat(web): token auth flow

--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -49,6 +49,7 @@
     "@nestjs/core": "^9.3.1",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@ory/kratos-client": "^0.11.0",
     "@prisma/client": "4.7.1",
@@ -63,6 +64,9 @@
     "google-protobuf": "^3.21.2",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "prom-client": "^14.1.0",
     "protobufjs": "^7.1.2",
@@ -79,6 +83,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.15",
     "@types/nodemailer": "^6.4.6",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
