--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -51,6 +51,7 @@
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
     "@ory/kratos-client": "^0.11.0",
     "@prisma/client": "4.7.1",
     "@sendgrid/mail": "^7.7.0",
