fix(web): version and deployment patch editing

--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -241,15 +241,36 @@ jobs:
         run: npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline --no-fund
       - name: Linting the code
         run: npm run lint
+
+  crux_test:
+    runs-on: ubuntu-22.04
+    needs: [crux_lint, changes]
+    defaults:
+      run:
+        working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+    if: |
+      ${{ needs.changes.outputs.crux == 'true' }} ||
+      github.ref_type == 'tag'
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline --no-fund
       - name: Generate prisma & build the application
         run: |
           npx prisma generate
+      - name: Running unit tests
+        run: npm run test
+      - name: Build the application
+        run: |
           npm run build --if-present
           npm prune --production
 
   crux_build:
     runs-on: ubuntu-22.04
-    needs: [crux_lint,changes]
+    needs: [crux_test, changes]
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     defaults:
