--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -44,7 +44,9 @@
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^1.0.0",
     "@nestjs/cli": "^9.1.5",
+    "@nestjs/common": "^9.3.1",
     "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.3.1",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.2.1",
@@ -72,9 +74,9 @@
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/testing": "^9.3.1",
     "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.4",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.15",
     "@types/nodemailer": "^6.4.6",
     "@types/supertest": "^2.0.12",
@@ -90,10 +92,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.1",
     "prettier": "^2.8.1",
     "prisma": "4.7.1",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-proto": "^1.135.3",
     "tsconfig-paths": "^4.1.1",
