--- a/.editorconfig
+++ b/.editorconfig
@@ -27,14 +27,13 @@ indent_size = 2
 indent_size = 2
 indent_style = space
 
-
 # Prisma schema
 [*.prisma]
 indent_size = 2
 indent_style = space
 
 # Alongside EditorConfig ESLint and Prettier are also in use
-[*.{ts,tsx}]
+[*.{ts,tsx,js}]
 indent_size = 2
 indent_style = space
 
