--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crux-ui",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Open-source delivery platform that helps developers to deliver applications efficiently by simplifying software releases and operations in any environment.",
   "author": "dyrector.io",
   "private": true,
@@ -87,5 +87,10 @@
     "tailwindcss": "^3.2.4",
     "ts-proto": "^1.135.3",
     "typescript": "^4.9.4"
+  },
+  "packages": {
+    "": {
+      "version": "0.3.4"
+    }
   }
 }
