--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -63,6 +63,7 @@ jobs:
           filters: |
             agents:
               - '${{ env.GOLANG_WORKING_DIRECTORY }}/**'
+              - '.github/workflows/full.yml'
             crux:
               - '${{ env.CRUX_WORKING_DIRECTORY }}/**'
               - '.github/workflows/full.yml'
@@ -71,6 +72,7 @@ jobs:
               - '.github/workflows/full.yml'
             kratos:
               - '${{ env.KRATOS_WORKING_DIRECTORY }}/**'
+              - '.github/workflows/full.yml'
       - name: Setting a buildtag
         id: settag
         working-directory: .github/workflows
@@ -367,75 +369,55 @@ jobs:
       #     name: crane
       #     path: artifacts
       - name: dagent - artifact download
-        if: |
-          needs.changes.outputs.agents == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.agents == 'true') || (github.ref_type == 'tag') }}
         uses: actions/download-artifact@v3
         with:
           name: dagent
           path: artifacts
       - name: agents - docker load
-        if: |
-          needs.changes.outputs.agents == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.agents == 'true') || (github.ref_type == 'tag') }}
         run: |
           zstd -dc artifacts/dagent.zstd | docker load
         # zstd -dc artifacts/crane.zstd | docker load
 
       - name: crux - artifact download
-        if: |
-          needs.changes.outputs.crux == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.crux == 'true') || (github.ref_type == 'tag') }}
         uses: actions/download-artifact@v3
         with:
           name: crux
           path: artifacts
       - name: crux - docker load
-        if: |
-          needs.changes.outputs.crux == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.crux == 'true') || (github.ref_type == 'tag') }}
         run: zstd -dc artifacts/crux.zstd | docker load
 
       - name: crux-ui - artifact download
-        if: |
-          needs.changes.outputs.cruxui == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.cruxui == 'true') || (github.ref_type == 'tag') }}
         uses: actions/download-artifact@v3
         with:
           name: crux-ui
           path: artifacts
       - name: crux-ui - docker load
-        if: |
-          needs.changes.outputs.cruxui == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.cruxui == 'true') || (github.ref_type == 'tag') }}
         run: zstd -dc artifacts/crux-ui.zstd | docker load
 
       - name: kratos - artifact download
-        if: |
-          needs.changes.outputs.kratos == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.kratos == 'true') || (github.ref_type == 'tag') }}
         uses: actions/download-artifact@v3
         with:
           name: kratos
           path: artifacts
       - name: kratos - docker load
-        if: |
-          needs.changes.outputs.kratos == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.kratos == 'true') || (github.ref_type == 'tag') }}
         run: zstd -dc artifacts/kratos.zstd | docker load
 
       - name: cli - artifact download
-        if: |
-          needs.changes.outputs.agents == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.agents == 'true') || (github.ref_type == 'tag') }}
         uses: actions/download-artifact@v3
         with:
           name: cli
           path: artifacts
       - name: cli - docker load
-        if: |
-          needs.changes.outputs.agents == 'true' ||
-          github.ref_type == 'tag'
+        if: ${{ (needs.changes.outputs.agents == 'true') || (github.ref_type == 'tag') }}
         run: zstd -dc artifacts/cli.zstd | docker load
       - name: Login to GHCR
         uses: docker/login-action@v2
