--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -57,7 +57,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
+    "@playwright/test": "^1.31.1",
     "@types/google-protobuf": "^3.15.6",
     "@types/jsoneditor": "^9.9.0",
     "@types/openpgp": "^4.4.18",
@@ -81,6 +81,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "grpc_tools_node_protoc_ts": "^5.3.2",
     "grpc-tools": "^1.12.3",
+    "playwright": "^1.28.1",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-organize-imports": "^3.2.1",
