fix: use local agent installs when force pull is disabled in cli

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -8,6 +8,9 @@ CRUX_AGENT_ADDRESS=host.docker.internal:5000
 CRUX_AGENT_IMAGE=stable
 JWT_SECRET=jwt-secret-token
 
+# install script docker pull disabled for the e2e tests
+AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
+
 LOG_LEVEL=verbose
 K8S_LOCAL_MANIFEST=false
 
