--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -27,6 +27,18 @@ env:
   GOLANG_WORKING_DIRECTORY: golang
 
 jobs:
+  test_cica:
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
+    needs: [kratos_build, e2e, changes]
+    if: github.ref_name != 'develop' &&
+      github.ref_name != 'main' &&
+      github.ref_type != 'tag'
+    steps:
+      - name: cica
+        run: echo test
+
   conventional_commits:
     name: Conventional commits validation
     runs-on: ubuntu-22.04
@@ -463,8 +475,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [go_build, go_cli_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag'
     environment: Workflow - Protected
@@ -532,8 +543,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag'
     environment: Workflow - Protected
@@ -578,8 +588,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux-ui_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag'
     environment: Workflow - Protected
@@ -624,8 +633,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [kratos_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag'
     environment: Workflow - Protected
