fix(crux): grpc identity illegal characters (#492)

--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -463,10 +463,9 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [go_build, go_cli_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: always() && (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
-      github.ref_type == 'tag'
+      github.ref_type == 'tag')
     environment: Workflow - Protected
     steps:
       - name: artifact download
@@ -532,10 +531,9 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: always() && (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
-      github.ref_type == 'tag'
+      github.ref_type == 'tag')
     environment: Workflow - Protected
     steps:
       - name: artifact download
@@ -578,10 +576,9 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux-ui_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: always() && (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
-      github.ref_type == 'tag'
+      github.ref_type == 'tag')
     environment: Workflow - Protected
     steps:
       - name: artifact download
@@ -624,10 +621,9 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [kratos_build, e2e, changes]
-    if: |
-      github.ref_name == 'develop' ||
+    if: always() && (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
-      github.ref_type == 'tag'
+      github.ref_type == 'tag')
     environment: Workflow - Protected
     steps:
       - name: artifact download
