fix: agent version, add missing env

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,4 +1,5 @@
 # Application configs
+KRATOS_URL=http://localhost:4433
 KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
