--- a/web/docker-compose.dev.yaml
+++ b/web/docker-compose.dev.yaml
@@ -29,7 +29,7 @@ services:
 
   kratos-migrate:
     container_name: crux-kratos-migrate
-    image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION}
+    image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION:-stable}
     depends_on:
       - kratos-postgres
     environment:
@@ -41,7 +41,7 @@ services:
 
   kratos:
     container_name: crux-kratos
-    image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION}
+    image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION:-stable}
     build:
       context: ./kratos
     depends_on:
