refactor: replace audit log grpc api with the http one

--- a/web/crux-ui/.env.ci
+++ b/web/crux-ui/.env.ci
@@ -15,7 +15,7 @@ DISABLE_RECAPTCHA=true
 CRUX_AGENT_ADDRESS=172.17.0.1:5000
 GRPC_AGENT_PORT=5000
 CRUX_API_ADDRESS=172.17.0.1:5001
-CRUX_HTTP_API_ADDRESS=localhost:1848
+CRUX_UI_URL=http://172.17.0.1:8000
 GRPC_API_PORT=5001
 DATABASE_URL=postgresql://crux:crux@172.17.0.1:5432/crux?schema=public
 JWT_SECRET=secret
