--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -1,5 +1,5 @@
 CRUX_API_ADDRESS=localhost:5001
-CRUX_HTTP_API_ADDRESS=localhost:1848
+CRUX_UI_URL=http://localhost:8000
 
 KRATOS_URL=http://localhost:8000/kratos
 KRATOS_ADMIN_URL=http://localhost:4434
