--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,6 +1,6 @@
 # Application configs
 KRATOS_ADMIN_URL=http://localhost:4434
-KRATOS_URL=http://localhost:4433
+KRATOS_URL=http://localhost:8000/kratos
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
 # podman has different alias host.containers.local:5000
