--- a/images/playwright/package.json
+++ b/images/playwright/package.json
@@ -4,19 +4,20 @@
     "description": "The playwright runner container for our CI pipeline.",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/dyrector-io/playwright.git"
+        "type": "git",
+        "url": "git+https://github.com/dyrector-io/playwright.git"
     },
     "author": "",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/dyrector-io/playwright/issues"
+        "url": "https://github.com/dyrector-io/playwright/issues"
     },
     "homepage": "https://github.com/dyrector-io/playwright#readme",
     "dependencies": {
-      "@playwright/test": "^1.28.1"
+        "@playwright/test": "^1.31.1",
+        "playwright": "^1.31.1"
     }
-  }
+}
