--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -426,7 +426,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
       - name: Setup using cli
-        run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.changes.outputs.tag }} --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
+        run: |
+          docker image ls
+          docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.changes.outputs.tag }} --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
       - name: Run tests
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
         env:
@@ -436,7 +438,7 @@ jobs:
           E2E_BASE_URL: "http://dyrectorio-stack_traefik:8000"
           MAILSLURPER_URL: "http://dyrectorio-stack_mailslurper:4437"
           CRUX_URL: "dyrectorio-stack_crux:5001"
-          KRATOS_URL: "http://dyrectorio-stack_kratos:4433"
+          KRATOS_URL: "http://dyrectorio-stack_traefik:8000/kratos"
           KRATOS_ADMIN_URL: "http://dyrectorio-stack_kratos:4434"
           CI: true
         run: |
@@ -463,7 +465,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [go_build, go_cli_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -531,7 +533,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -576,7 +578,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux-ui_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -621,7 +623,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [kratos_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
