--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -426,7 +426,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
       - name: Setup using cli
-        run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.changes.outputs.tag }} --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
+        run: |
+          docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.changes.outputs.tag }} --disable-forcepull --imagetag ${{ needs.changes.outputs.tag }} --network $(docker network ls -f name=github_network --format {{.Name}}) --expect-container-env --debug up
       - name: Run tests
         working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
         env:
@@ -443,6 +444,18 @@ jobs:
           npm ci --include=dev
           npx playwright install chromium
           npm run test:e2e
+      - name: Gather logs
+        if: always()
+        run: |
+          mkdir logs
+          docker logs dyrectorio-stack_crux-ui > logs/e2e-crux-ui.log
+          docker logs dyrectorio-stack_crux > logs/e2e-crux.log
+          docker logs dyrectorio-stack_kratos > logs/e2e-kratos.log
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: e2e-logs
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/logs
       - uses: actions/upload-artifact@v3
         if: always()
         with:
@@ -463,7 +476,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [go_build, go_cli_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -531,7 +544,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -576,7 +589,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [crux-ui_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
@@ -621,7 +634,7 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-1
     needs: [kratos_build, e2e, changes]
-    if: always() && (github.ref_name == 'develop' ||
+    if: (github.ref_name == 'develop' ||
       github.ref_name == 'main' ||
       github.ref_type == 'tag')
     environment: Workflow - Protected
